--- a/CW1/Simple_Web_App/main/static/main/css/main.css
+++ b/CW1/Simple_Web_App/main/static/main/css/main.css
@@ -79,3 +79,61 @@ button:hover {
     margin-bottom: 10px;
     border: 1px solid var(--border-color);
 }
+
+.delete-btn {
+    background-color: #d9534f;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.delete-btn:hover {
+    background-color: #c9302c;
+}
+
+.edit-btn {
+    background: #3498db;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.edit-area {
+    width: 100%;
+    min-height: 60px;
+}
+
+.edited-label {
+    font-size: 12px;
+    color: #1da1f2;
+    margin-left: 500px;
+}
+
+.post-actions {
+    display: flex;
+    gap: 20px;
+    margin-top: 5px;
+}
+
+.delete-form {
+    margin: 0;
+}
+
+.btnn-logout {
+    margin-top: 0px;
+
+}
+
+.user-info a {
+    text-decoration: none;
+}
+
+.user-info a:hover {
+    text-decoration: none;
+}
+
+
